; ModuleID = '/home/carl/AnghaBench/lede/package/kernel/lantiq/ltq-adsl-mei/src/extr_drv_mei_cpe.c_DSL_BSP_MemoryDebugAccess.c'
source_filename = "/home/carl/AnghaBench/lede/package/kernel/lantiq/ltq-adsl-mei/src/extr_drv_mei_cpe.c_DSL_BSP_MemoryDebugAccess.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DSL_DEV_MEI_ERR_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DSL_BSP_MemoryDebugAccess(i32* %0, i32 %1, i32 %2, i32* %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  store i32 %4, i32* %10, align 4
  %12 = load i32, i32* @DSL_DEV_MEI_ERR_SUCCESS, align 4
  store i32 %12, i32* %11, align 4
  %13 = load i32, i32* %7, align 4
  switch i32 %13, label %26 [
    i32 129, label %14
    i32 128, label %20
  ]

14:                                               ; preds = %5
  %15 = load i32*, i32** %6, align 8
  %16 = load i32, i32* %8, align 4
  %17 = load i32*, i32** %9, align 8
  %18 = load i32, i32* %10, align 4
  %19 = call i32 @IFX_MEI_DebugRead(i32* %15, i32 %16, i32* %17, i32 %18)
  store i32 %19, i32* %11, align 4
  br label %26

20:                                               ; preds = %5
  %21 = load i32*, i32** %6, align 8
  %22 = load i32, i32* %8, align 4
  %23 = load i32*, i32** %9, align 8
  %24 = load i32, i32* %10, align 4
  %25 = call i32 @IFX_MEI_DebugWrite(i32* %21, i32 %22, i32* %23, i32 %24)
  store i32 %25, i32* %11, align 4
  br label %26

26:                                               ; preds = %5, %20, %14
  %27 = load i32, i32* @DSL_DEV_MEI_ERR_SUCCESS, align 4
  ret i32 %27
}

declare dso_local i32 @IFX_MEI_DebugRead(i32*, i32, i32*, i32) #1

declare dso_local i32 @IFX_MEI_DebugWrite(i32*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
